--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "python": "C:\\Users\\Paulo\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
         }
     ]
 }
